# ca-lang

./: .gitignore  CMakeLists.txt  LICENSE_en  Makefile  README.en.md  README.md  ca.c  ca.h  ca.l  ca.y  ca_parser.c  ca_runtime.c  ca_types.h  config.h  dotgraph.cpp  dotgraph.h  pattern_left.txt  strutil.c  symtable.h  symtable_cpp.cpp  type_system.cpp  type_system.h  type_system_llvm.h  unwind.md  utils.c  variable-shielding.md
llvm/: CMakeLists.txt  IR_generator.cpp  IR_generator.h  dwarf_debug.cpp  dwarf_debug.h  ir1.cpp  ir1.h  jit1.h
src/: CMakeLists.txt  ca.cpp  ca.l  ca.y  ca_parser.c  ca_parser.h  ca_runtime.c  ca_runtime.cpp  ca_runtime.h  ca_types.h  config.h  dotgraph.cpp  dotgraph.h  strutil.c  strutil.h  symtable.h  symtable_cpp.cpp  symtable_cpp.h  type_system.cpp  type_system.h  type_system_llvm.cpp  type_system_llvm.h  utils.c  utils.h  wrapper.h
src/llvm/: CMakeLists.txt  IR_generator.cpp  IR_generator.h  dwarf_debug.cpp  dwarf_debug.h  ir1.cpp  ir1.h  jit1.cpp  jit1.h
test/: CMakeLists.txt  a.ca  arithmetic.ca  binary1.ca  binary2.ca  call.c  call_goto.c  ct4.c  double.c  extern_call1.ca  extern_call2.ca  extern_call2_assist.ca  extern_call3.ca  extern_fn1.ca  extern_multi.ca  extern_printf.ca  fib.ca  fib2.ca  fib_mvar.ca  float.c  fn3.ca  fn_add.ca  fn_fib2.ca  fn_multiple.ca  fn_param.ca  fn_param2.ca  fn_param2_comment.ca  fn_param3.ca  fn_param4.ca  fn_param_simple.ca  fn_recursive1.ca  fn_recursive2.ca  fn_recursive3.ca  fn_ret.ca  fn_retconv.ca  fn_simple.c  fn_simple.ca  fn_simple2.ca  fn_simple3.ca  global.c  (+35 more)
test/array/: CMakeLists.txt  array.c  array.ca  array.ca.ll  array.ca.result  array.ll  array2pointer.c  array2pointer.ca  array2pointer.ca.result  array2pointer.ll  array2string.ca  array2string.ca.ll  array2string.ca.result  array2stringbad1.ca  array2stringbad2.ca  array_2sideinfer.ca  array_2sideinfer.ca.ll  array_2sideinfer.ca.result  array_assign.ca  array_dbgprint1.ca  array_dbgprint1.ca.result  array_empty.ca  array_error.ca  array_error1.ca  array_error2.ca  array_item1.ca  array_item2.ca  array_item3.ca  array_item4.ca  array_item_assign1.ca  array_item_assign2.ca  array_literal_struct.ca  array_range.ca  array_range2.ca  array_range3.ca  array_simple.c  array_simple.ca  array_simple.ll  array_struct1.ca  array_struct1.ca.ll  (+11 more)
test/as/: CMakeLists.txt  as1.c  as1.ca  as2.ca  as_bool.ca  as_bool2.ca  as_bool3.ca  as_i32char.ca
test/box/: CMakeLists.txt  box0.ca  box0.ca.ll  box1.ca  box2.ca  box3.ca  box3a.ca  box4.ca  box5.ca  box6.ca  box7.ca  box_scope1.ca  box_type.ca  drop1.ca  drop2.ca  drop3.ca
test/cmp/: CMakeLists.txt  cmp1.ca  cmp2.ca  cmp3.ca
test/flow/: CMakeLists.txt  dd.ll  for0.ca  for1.ca  for2.ca  for3.ca  for_ptr0.ca  for_ptr1.ca  for_ptr2.ca  forwhileloop1.ca  ifelseif0.ca  ifelseif1.ca  ifelseif2.ca  ifelseif3.ca  ifelseif4.ca  ifstmt.tr.1  ifstmt.tr.2  ifstmt1.ca  ifstmt2.ca  loop0.ca  loop0.ca.ll  loop00.ca  loop1.ca  loop2.ca  loop3.ca  loop3.ca.ll  loop4.ca  loopwhile1.ca  while1.ca  while2.ca  while3.ca  while3.ca.ll  while4.ca  whileloop1.ca
test/function/: CMakeLists.txt  fn_param_array1.ca  fn_param_pointer1.ca  fn_param_struct1.ca  fn_return_struct.ca
test/generic/: CMakeLists.txt  gen_func1.ca  gen_func2.ca
test/nomain/: CMakeLists.txt  extern_call2.ca  extern_call2_assist.ca  extern_fn1.ca  extern_putchar.ca  fn1.ca  fn2.ca  fn3.ca  fn_add.ca  fn_float.ca  fn_multiple.ca  fn_param_simple.ca  fn_recursive1.ca  fn_simple.ca  if.ca  if_assign.ca  if_empty.ca  input.ca  polynomial.ca  recur_scope.ca  recur_scope1.ca  symtax.ca  tt.ca  type1.ca
test/op/: CMakeLists.txt  add1.ca  bit1.ca  inplace_assign1.ca  inplace_assign2.ca  inplace_assign3.ca  inplace_assign4.ca  inplace_assign5.ca  land.c  land.ca  land.ca.ll  land.ll  land2.ca  landor.c  landor.ca  landor.ll  landor2.ca  landor3.ca  landor3.ca.ll  landor4.ca  landor5.ca  lor.ca  lor.ca.ll  lor2.ca  neg.ca  not1.ca  rem1.ca  rem2.ca  shift1.ca  shift2.ca  shift3.ca
test/pattern/: CMakeLists.txt  for_cover_param.ca  let0.ca  let010.ca  let012.ca  let02.ca  let03.ca  let04.ca  let05.ca  let1.ca  let11.ca  let110.ca  let13.ca  let130.ca  let14.ca  let140.ca  let15.ca  let16.ca  let170.ca  let18.ca  let210.ca  let_array0.ca  let_array1.ca  let_array2.ca  let_array3.ca  let_array4.ca  let_array5.ca  let_array6.ca  let_array7.ca  let_array8.ca  let_array9.ca  let_array_error1.ca  let_array_error2.ca  let_cover_param.ca  let_lit0.ca  let_lit1.ca  let_lit2.ca  let_lit3.ca  let_lit4.ca  let_tuple2.ca  (+4 more)
test/performance/: fib.ca
test/pointer/: CMakeLists.txt  deref.c  deref.ca  deref.ll  deref2.ca  deref3.ca  deref4.ca  deref5.ca  deref5.ca.ll  deref6.ca  deref6.ca.ll  deref7.ca  deref_error.ca  deref_error2.ca  deref_error3.ca  deref_m.ca  inplace_op.ca  op1.ca  op2.ca  op3.ca  op4.ca  op4.ca.ll  op4.ca.ll.13  pointer.c  pointer.ca  pointer.ca.ll  pointer.ll  pointer2.ca  pointer2.ca.ll  pointer2_notzero.ca  pointer2_notzero.ca.ll  pointer_mixed.ca  pointer_mixed.ca.ll  pointer_mixed2.ca  pointer_mixed2.ca.ll  pointer_notzero.ca  pointer_notzero.ca.ll  primitives.ca  primitives.ca.ll  primitives2.ca  (+15 more)
test/range/: CMakeLists.txt  range1.ca  range2.ca  range3.ca  range4.ca  range_array1.ca  range_array2.ca  range_assign.ca  range_assign_error.ca  range_error1.ca  range_for1.ca  range_for2.ca  range_for_error1.ca  range_for_error2.ca  range_full.ca  range_half1.ca  range_half2.ca  range_range1.ca  range_range2.ca
test/runtime/: rt_add.ca
test/shielding/: CMakeLists.txt  let0.ca  let01.ca  let010.ca  let011.ca  let012.ca  let03.ca  let04.ca  let05.ca  let06.ca  let07.ca  let08.ca  let09.ca  let1.ca  let11.ca  let13.ca  let14.ca  let140.ca  let15.ca  let16.ca  let17.ca  let170.ca  let171.ca  let19.ca  let210.ca  let211.ca  let212.ca  let_tuple.ca  leterror1.ca  leterror3.ca  leterror4.ca  letf1.ca  pattern1.ca  pattern2.ca  shielding_samebind.ca  shielding_samelevel.ca  shielding_simple.ca  shielding_simple2.ca
test/slice/: CMakeLists.txt  slice1.ca  slice1.ll  test.ca
test/string/: CMakeLists.txt  cstring.ca  cstring2.ca  cstring3.ca  (+3 more)
(+354 files in other folders)
